--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,7 +15,7 @@
     tools:context="com.example.quanganhpham.layout_ver1.MainActivity">
 
     <ListView
-        android:id="@+id/list_item"
+        android:id="@+id/list_contact"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
