--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -18,7 +18,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="#58bc6b"
+            android:background="@color/colorBlue"
 
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
