--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,9 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="row_item_margin">16dp</dimen>
+    <dimen name="row_item_layout">70dp</dimen>
+    <dimen name="row_item_size">20sp</dimen>
+    <dimen name="row_item_margin_left">50dp</dimen>
+    <dimen name="row_item_size_note">15sp</dimen>
 </resources>
