--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -17,7 +17,13 @@
     <ListView
         android:id="@+id/list_contact"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/nav_header_vertical_spacing"
 
-    </ListView>
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+
 </RelativeLayout>
